## SXEmacs Makefile.am

## Copyright (C) 2007 Steve Youngs.

## This file is part of SXEmacs.

## SXEmacs is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.

## SXEmacs is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

# Help the Developers and yourself. Just use the C locale and settings
# for the compilation. They can still be overriden by make LANG=<whatever>
# but that is general a not very good idea
LANG=C
LC_ALL=C

info_TEXINFOS =
info_TEXINFOS += cl.texi
info_TEXINFOS += custom.texi
info_TEXINFOS += emodules.texi
info_TEXINFOS += external-widget.texi
info_TEXINFOS += internals/internals.texi
info_TEXINFOS += lispref/lispref.texi
info_TEXINFOS += new-users-guide/new-users-guide.texi
info_TEXINFOS += sppm.texi
info_TEXINFOS += sxemacs-faq.texi
info_TEXINFOS += sxemacs/sxemacs.texi
info_TEXINFOS += term.texi
info_TEXINFOS += widget.texi

internals_internals_TEXINFOS =
internals_internals_TEXINFOS += internals/index.texi

lispref_lispref_TEXINFOS =
lispref_lispref_TEXINFOS += lispref/abbrevs.texi
lispref_lispref_TEXINFOS += lispref/annotations.texi
lispref_lispref_TEXINFOS += lispref/back.texi
lispref_lispref_TEXINFOS += lispref/backups.texi
lispref_lispref_TEXINFOS += lispref/buffers.texi
lispref_lispref_TEXINFOS += lispref/building.texi
lispref_lispref_TEXINFOS += lispref/commands.texi
lispref_lispref_TEXINFOS += lispref/compile.texi
lispref_lispref_TEXINFOS += lispref/consoles-devices.texi
lispref_lispref_TEXINFOS += lispref/control.texi
lispref_lispref_TEXINFOS += lispref/customize.texi
lispref_lispref_TEXINFOS += lispref/databases.texi
lispref_lispref_TEXINFOS += lispref/debugging.texi
lispref_lispref_TEXINFOS += lispref/dialog.texi
lispref_lispref_TEXINFOS += lispref/display.texi
lispref_lispref_TEXINFOS += lispref/dragndrop.texi
lispref_lispref_TEXINFOS += lispref/edebug-inc.texi
lispref_lispref_TEXINFOS += lispref/edebug.texi
lispref_lispref_TEXINFOS += lispref/ent.texi
lispref_lispref_TEXINFOS += lispref/errors.texi
lispref_lispref_TEXINFOS += lispref/eval.texi
lispref_lispref_TEXINFOS += lispref/extents.texi
lispref_lispref_TEXINFOS += lispref/faces.texi
lispref_lispref_TEXINFOS += lispref/ffi.texi
lispref_lispref_TEXINFOS += lispref/files.texi
lispref_lispref_TEXINFOS += lispref/frames.texi
lispref_lispref_TEXINFOS += lispref/functions.texi
lispref_lispref_TEXINFOS += lispref/glyphs.texi
lispref_lispref_TEXINFOS += lispref/gutter.texi
lispref_lispref_TEXINFOS += lispref/hash-tables.texi
lispref_lispref_TEXINFOS += lispref/help.texi
lispref_lispref_TEXINFOS += lispref/hooks.texi
lispref_lispref_TEXINFOS += lispref/index.texi
lispref_lispref_TEXINFOS += lispref/internationalization.texi
lispref_lispref_TEXINFOS += lispref/intro.texi
lispref_lispref_TEXINFOS += lispref/keymaps.texi
lispref_lispref_TEXINFOS += lispref/ldap.texi
lispref_lispref_TEXINFOS += lispref/lists.texi
lispref_lispref_TEXINFOS += lispref/loading.texi
lispref_lispref_TEXINFOS += lispref/locals.texi
lispref_lispref_TEXINFOS += lispref/macros.texi
lispref_lispref_TEXINFOS += lispref/maps.texi
lispref_lispref_TEXINFOS += lispref/markers.texi
lispref_lispref_TEXINFOS += lispref/media.texi
lispref_lispref_TEXINFOS += lispref/menus.texi
lispref_lispref_TEXINFOS += lispref/minibuf.texi
lispref_lispref_TEXINFOS += lispref/modes.texi
lispref_lispref_TEXINFOS += lispref/mouse.texi
lispref_lispref_TEXINFOS += lispref/mule.texi
lispref_lispref_TEXINFOS += lispref/numbers.texi
lispref_lispref_TEXINFOS += lispref/objects.texi
lispref_lispref_TEXINFOS += lispref/openssl.texi
lispref_lispref_TEXINFOS += lispref/os.texi
lispref_lispref_TEXINFOS += lispref/packaging.texi
lispref_lispref_TEXINFOS += lispref/positions.texi
lispref_lispref_TEXINFOS += lispref/postgresql.texi
lispref_lispref_TEXINFOS += lispref/processes.texi
lispref_lispref_TEXINFOS += lispref/range-tables.texi
lispref_lispref_TEXINFOS += lispref/scrollbars.texi
lispref_lispref_TEXINFOS += lispref/searching.texi
lispref_lispref_TEXINFOS += lispref/sequences.texi
lispref_lispref_TEXINFOS += lispref/specifiers.texi
lispref_lispref_TEXINFOS += lispref/streams.texi
lispref_lispref_TEXINFOS += lispref/strings.texi
lispref_lispref_TEXINFOS += lispref/symbols.texi
lispref_lispref_TEXINFOS += lispref/syntax.texi
lispref_lispref_TEXINFOS += lispref/text.texi
lispref_lispref_TEXINFOS += lispref/tips.texi
lispref_lispref_TEXINFOS += lispref/toolbar.texi
lispref_lispref_TEXINFOS += lispref/variables.texi
lispref_lispref_TEXINFOS += lispref/windows.texi
lispref_lispref_TEXINFOS += lispref/x-windows.texi

new_users_guide_new_users_guide_TEXINFOS =
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/custom1.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/custom2.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/edit.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/enter.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/files.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/help.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/modes.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/region.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/search.texi
new_users_guide_new_users_guide_TEXINFOS += new-users-guide/xmenu.texi

sxemacs_sxemacs_TEXINFOS =
sxemacs_sxemacs_TEXINFOS += sxemacs/abbrevs.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/basic.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/buffers.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/building.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/calendar.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/cmdargs.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/custom.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/display.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/entering.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/files.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/fixit.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/frame.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/glossary.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/gpl.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/help.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/indent.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/keystrokes.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/killing.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/m-x.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/major.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/mark.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/menus.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/mini.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/misc.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/mouse.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/mule.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/new.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/packages.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/picture.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/programs.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/reading.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/regs.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/search.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/sending.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/startup.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/text.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/trouble.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/undo.texi
sxemacs_sxemacs_TEXINFOS += sxemacs/windows.texi
